tests/ui/generic-const-items/def-site-eval.fail.stderr
error[E0080]: evaluation panicked: explicit panic
  --> $DIR/def-site-eval.rs:13:20
   |
LL | const _<'_a>: () = panic!();
   |                    ^^^^^^^^ evaluation of `_` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
